infra/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: banking
  labels:
    name: banking
    team: platform-engineering
    environment: production
